fix home page on mobile

--- a/index.css
+++ b/index.css
@@ -2,9 +2,10 @@ body {
     margin: 0;
 }
 
-.home_page_pic{
-    width: 500px;
-    height: 840px;
-    display:flex;
-    margin:auto;
+.home_page_pic {
+    max-width: 90%;
+    height: auto;
+    display: block;
+    margin: auto;
+    padding: 0 20px;
 }
